--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -1,3 +1,377 @@
 {
-  "Home": "Homepage"
+  "register": "Register",
+  "login": "Login",
+  "confirm": "Confirm",
+  "invalidUrl": "Invalid url",
+  "resetPassword": "Reset password",
+  "UNVERIFY": "Not KYC",
+  "PENDING": "Waiting for KYC",
+  "APPROVED": "Approved",
+  "REJECTED": "Rejected",
+  "LOCKED": "Locked",
+  "profile": "Profile",
+  "payment": "Payment",
+  "tree": "System",
+  "transactions": "Transactions",
+  "status": "Status",
+  "memberSince": "Member since",
+  "walletAddress": "Wallet address",
+  "fine": "Fine",
+  "idCardFront": "ID card Front",
+  "idCardBack": "ID card Back",
+  "update": "Update",
+  "logout": "Logout",
+  "paymentTitle": "Secure payment information",
+  "registerFee": "Registration Fee",
+  "weeks": "Number of weeks",
+  "verifyAccountAlert": "Please provide a picture of your personal information to verify your account",
+  "forgotPassword": "Forgot password",
+  "rememberMe": "Remember me",
+  "password": "Password",
+  "aboutUs": "About",
+  "features": "Features",
+  "contact": "Contact",
+  "validUrl": "Valid path",
+  "duplicateInfo": "There is a duplicate information. Please check again",
+  "registerSuccessful": "Registration is successful. Please check your Email",
+  "userAlreadyConfirmed": "User is confirmed",
+  "Recovery mail sent.Please check your mail": "Recovery mail sent. Please check your mail",
+  "Login information is incorrect": "Login information is incorrect",
+  "Password updated. Please login with new password": "Password updated. Please login with new password",
+  "Unable to update password": "Unable to update password",
+  "User not found": "User not found",
+  "Token expired": "Token has expired",
+  "Refresh token not found, login again": "Refresh token not found, login again",
+  "Invalid refresh token": "Invalid refresh token",
+  "User removed from DB": "User removed from Data",
+  "User does not exist": "User does not exist",
+  "Update successful": "Update successful",
+  "Approve successful": "Approve successful",
+  "Not authorized. Token failed": "Not authorized. Token failed",
+  "Not authorized admin": "The administrator is not authorized",
+
+  "dashboard": "Dashboard",
+  "users": "Users",
+  "Internal error": "System error. Please try again later",
+  "Please install metamask": "Please install metamask",
+  "Please login your registered wallet": "Please login your registered wallet",
+  "feature1": "Different from traditional investment platforms, Lend A Hand is focused on members. We do not hold any member investments. Instead, our community shares and exchange our assets freely. By aggregating reinvestment and making decisions democratic, we can create a positive change in our community.",
+  "feature2": "At Lend A Hand, we use blockchain technology to ensure transparent, secure and efficient transactions. This allows our members to invest with confidence, knowing that their money is used for good. Our platform also protects members' privacy while ensuring transparency and accountability.",
+  "feature3": "Community Share InvestmentAt Lend A Hand, we believe that community investing will make a significant social impact.Our platform allows members to support the LAH community while build our wealth. By investing directly in LAH members, we can make a difference in people's lives and build a secure future.",
+  "Đầu tư Chia sẻ Cộng đồng": "Invest Share Community",
+  "The Power of United": "The Power of United",
+  "Đầu tư vào Tương lai của bạn cùng với Lend A Hand": "Invest in Your Future with Lend A Hand",
+  "Công nghệ Blockchain": "Blockchain Technology",
+  "Trách nhiệm của Thành viên": "Member Responsibilities",
+  "actionTitle": "Join us today and be a part of LAH community, committed to building a bright future.",
+  "Payment successful": "Payment successful",
+  "yourBalance": "Your balance",
+  "notEnoughBalance": "Not enough balance",
+
+  "commissionFee": "Commission",
+  "lahFuns": "LAH Fund",
+  "pleasePay": "Please pay",
+  "donePayment": "Complete payment",
+  "Password is required": "Password is required",
+  "Confirm password is required": "Confirm password is required",
+  "Email is required": "Email is required",
+  "Wallet address is required": "Wallet address is required",
+  "User ID is required": "User ID is required",
+  "Password must have at least 8 characters": "Password must have at least 8 characters",
+  "Password must contain at least 8 characters and a number": "Password must contain at least 8 characters and a number",
+  "Congratulations, you have successfully authenticated": "Congratulations, you have successfully authenticated",
+  "REGISTER": "New Registration",
+  "DIRECT": "Direct Commission",
+  "REFERRAL": "LAH Fund",
+  "linkVerify": "Link mail",
+
+  "referral": "Referral",
+  "Create referral link": "Create referral link",
+  "copied": "Copied",
+  "Choose children": "Select subordinates",
+  "No choose": "Don't choose",
+  "Your passwords do no match": "Passwords do not match",
+  "Please enter the correct wallet format": "Please enter the correct wallet format",
+
+  "REFERRALHOLD": "LAH Fund",
+  "DIRECTHOLD": "Direct Commission",
+
+  "SUCCESS": "Success",
+  "refunded": "Refunded",
+  "not refunded": "Not refunded",
+  "transType": "Transaction type",
+  "createTime": "Create Time",
+  "refundStatus": "Refund Status",
+  "checkCanRefund": "Check return conditions",
+  "changeToRefunded": "Convert to refunded",
+  "refund": "Process refund",
+
+  "HOLD": "HOLD",
+  "times": "Times",
+  "Send User Name": "Sender Name",
+  "Send User Email": "Sender Email",
+  "Send User Wallet": "Sender Wallet",
+  "Receive User Name": "Receiver Name",
+  "Receive User Email": "Receiver Email",
+  "Receive User Wallet": "Receiver Wallet",
+  "amount": "Amount",
+  "count pay": "Number of Contribution",
+  "send": "Sender",
+  "receive": "Recipient",
+  "type": "Type",
+  "time": "Time",
+  "search with user ref code": "Search with referral code",
+  "search with user name or email": "Search by username or email",
+  "ref code": "Referral code",
+  "username": "Name",
+  "Invalid receiving wallet address!": "Invalid receiving wallet address!",
+
+  "User not have child": "The account has no subordinates",
+  "Getting data": "Getting data",
+  "Getting data.Please wait": "Getting data.Please wait",
+  "children": "DIRECT REFERRAL MEMBERS",
+
+  "movePerson": "Move Person",
+  "receivePerson": "Recipient",
+  "Please select move and receive ID": "Please select sender and recipient",
+
+  "choose": "Choose",
+  "chose": "Selected",
+  "move account": "Move account",
+  "below account": "Below account",
+  "moveIncludeChild": "Move subordinates",
+  "moveWithoutChild": "Move does not include subordinates",
+
+  "search": "Search",
+  "Dupplicate wallet address": "Dupplicate wallet address",
+
+  "fineFee": "penalty fee",
+  "FINE": "FINE",
+
+  "trash": "Trash",
+
+  "You are not eligible for next step payment": "You are not eligible for next step payment",
+
+  "export": "Export",
+  "export users list": "Export user list",
+  "export trans list": "Export transaction list",
+  "refUserName": "Referer",
+  "name": "Name",
+  "order": "Order",
+  "usersListFileName": "List_users",
+  "transListFileName": "List_transactions",
+  "senderName": "Sender",
+  "receiverName": "Recipient",
+  "address_from": "Sender wallet",
+  "address_ref": "Receiver wallet",
+  "isHoldRefund": "Refund",
+  "createdAt": "Time",
+  "export successful": "Export successful",
+  "false": "Not yet",
+  "true": "Yes",
+
+  "Are you sure to do this.": "Please confirm delete this user!",
+  "Delete user Successfull": "Delete user successfully",
+  "change wallet": "Change wallet address",
+  "Please check your email to exchange your wallet": "Please check your email for the link",
+  "Code is started": "Code is required",
+  "Wallet change mail sent. Please check your mail": "Change wallet mail sent. Please check your mail",
+  "Could not send the mail. Please retry.": "Unable to send the mail. Please try again",
+  "Your wallet address updated": "Your wallet address has been updated.",
+  "receiverEmail": "Receiver Email",
+  "senderEmail": "Sender Email",
+  "the next pay count": "The next distribution",
+  "isRegistered": "Completed Registration",
+
+  "full3child": "The account has enough 5 branches",
+  "confirm password": "Confirm password",
+  "wallet address": "Wallet address",
+  "user name": "User name",
+  "phone": "Phone number",
+  "Phone is required": "Phone number is required",
+  "Please enter the correct phone format": "Please enter the correct phone number format",
+  "Dupplicate phone": "Duplicate phone number",
+  "This account has child": "This account already has subordinates.Features will be added later",
+  "countChild": "Number of child",
+
+  "Please connect your wallet": "Please connect your wallet",
+  "Please connect your true wallet": "Please connect the correct wallet you have registered",
+
+  "congrateLayer": "Congratulations you have reached an important milestone. Your account has completed the floor :",
+
+  "id code": "ID/DL/Passport number",
+  "id code is required": "ID/DL/Passport number is required",
+  "edit": "Edit",
+  "delete": "Delete",
+  "show password": "Show password",
+  "hide password": "Hide password",
+
+  "Please click complete payment below": "Please click complete payment below",
+
+  "cancel": "Cancel",
+  "active": "Active",
+  "inactive": "Lock",
+
+  "infoAccountAlert": "Please provide your account information (Phone number, ID code)",
+  "deleting": "Deleting in progress...",
+
+  "System not found": "System not found",
+  "Couldn't find any superior information": "Couldn't find any superior information",
+  "No referrer information found": "No referrer information found",
+  "congrateTier": "Congratulations on completing tier ",
+  "transactionsList": "Transactions",
+
+  "duplicateInfoEmail": "Duplicate Email",
+  "duplicateInfoUserId": "Duplicate user name",
+  "duplicateInfoIdCode": "Duplicate ID/DL/Passport number",
+
+  "termTitle": "Lend A Hand Program - Terms and Conditions",
+  "termDate": "Effective Date: July 01, 2023",
+  "term1": "Program Overview",
+  "term11": "The Lend A Hand Program is a community-based initiative that aims to help members achieve financial freedom by providing voluntary assistance to one another.",
+  "term12": "Participants in the Program are individuals who voluntarily offer their assistance to other Lend A Hand members.",
+  "term2": "Participant Eligibility and Registration",
+  "term21": "Participants must meet the following criteria to be eligible for the Program :",
+  "term21a": "Participants must be 16 years old or above.",
+  "term21b": "Participants are required to contribute a certain amount of money to other Lend A Hand members, based on the specific tier requirements. New members must commit to referring a minimum of 3 members within the first 3 weeks of becoming a Lend A Hand member and maintaining 3 direct referrals to retain membership.",
+  "term21c": "Participants must provide a valid government-issued ID, driver's license, or passport.",
+  "term21d": "Members are responsible for refunding any mistaken transfers made to their accounts.",
+  "term22": "Participants must complete the registration process, providing accurate and up-to-date information.",
+  "term3": "Responsibilities of Participants",
+  "term31": "Participants agree to :",
+  "term31a": "Provide their assistance voluntarily and without any expectation of compensation.",
+  "term31b": "Abide by all applicable laws, rules, and regulations while participating in the Lend A Hand Program.",
+  "term31c": "Treat the recipients of their assistance with respect and dignity.",
+  "term31d": "Maintain the confidentiality of any personal or sensitive information obtained during the Program.",
+  "term32": "Participants must obtain proper consent, where applicable, from the recipients of their assistance to collect and use any personal or sensitive information.",
+  "term4": "Limits of Liability",
+  "term41": "WeUnity and its affiliates shall not be liable for any loss, damage, or injury arising out of or in connection with the Program, including acts or omissions of Participants.",
+  "term5": "Termination",
+  "term51": "WeUnity reserves the right to suspend or terminate a Participant's involvement in the Program at any time if they fail to comply with these terms and conditions or if their conduct is deemed detrimental to the Program or its recipients.",
+  "term6": "Modifications to Terms and Conditions",
+  "term61": "WeUnity may modify these terms and conditions at any time, and such modifications shall be effective upon posting on www.lah12.com.",
+  "term7": "Governing Law",
+  "term71": "These terms and conditions shall be governed by and construed in accordance with the terms and conditions of WeUnity.",
+
+  "choosePaymentMethod": "Select payment package",
+  "skip": "Skip",
+  "buyPackage": "Package",
+  "buyPackageA": "(LAH 12 times)",
+  "buyPackageB": "(LAH 6 times)",
+
+  "continueWithPackageB": "Continue with package B",
+  "contineWithPackageC": "Continue with package C",
+  "yes": "Yes",
+  "no": "No",
+  "User has generated a transaction": "User generated a transaction",
+  "payment error": "payment error",
+  "You have refused to pay": "You have refused to pay",
+  "applying": "(Applying)",
+
+  "setting": "Settings",
+  "settingPackage": "Settings packages",
+  "buyPackageC": "(LAH 1 time)",
+
+  "Package has been disabled": "Package has been disabled",
+
+  "Chào mừng bạn đến với Lend a Hand, Hệ thống đột phá để tích lũy tài sản thông qua sự hỗ trợ đồng lòng.": "Welcome to Lend A Hand, A revolutionary system for accumulating wealth through mutual support.",
+  "Với Lend a Hand, bạn có thể tham gia vào thành viên Land A Hand, một cộng đồng của những thành viên có chung mục tiêu giúp đỡ nhau phát triển tài chính. Là thành viên chủ động trên nền tảng của chúng tôi, bạn có thể tham gia vào một mạng lưới những người hào phóng, hỗ trợ lẫn nhau trong những thời điểm cần thiết.": "With Lend a Hand, you can join a community of like-minded individuals who are committed to helping each other grow financially. As an active member of our platform, you can participate in a network of generous people who support each other in times of need.",
+  "Cho dù bạn đang đối mặt với một khoản chi không mong đợi, muốn đầu tư vào dự án kinh doanh mới, hay đơn giản chỉ muốn tiết kiệm cho tương lai, Lend a Hand có thể giúp bạn. Các thành viên của chúng tôi cùng nhau góp vốn và cung cấp sự hỗ trợ tài chính cho nhau, tạo nên một vòng xoay tích luỹ tài sản.": "Whether you're facing an unexpected expense, looking to invest in a new business venture, or simply want to save for the future, Lend a Hand can help. Our members pool their resources together and provide financial assistance to one another, creating a cycle of wealth accumulation.",
+  "address": "Address",
+  "email": "Email",
+  "29 Võ Văn Tần, Phường Võ Thị Sáu, Quận 3, TP Hồ Chí Minh, Việt Nam": "29 VO VAN TAN, Ward VO THI SAU, District 3 | Ho Chi Minh City, Viet Nam",
+
+  "openLah": "Unconditionally open",
+  "closeLah": "Unconditionally close",
+
+  "increaseNextTier": "Upgrade to tier ",
+  "congraTier": "You have completed Tier {{tier}} contributions. Be proud of yourself;  success is just a step away",
+  "noTier": "TIER CONTRIBUTIONS COMPLETED : ",
+  "pleaseEnterToIncreaseTier": "TO GO TO TIER PLEASE CLICK THE BUTTON BELOW",
+
+  "tier is required": "Please fill in tier",
+  "createUser": "Create new user",
+  "createUserSuccessful": "New user created successfully",
+
+  "settingWallet": "Setting Wallets",
+  "untilRefunds": "Refunds",
+
+  "note is required": "Note is required",
+  "note": "Note",
+  "fromDate": "From date",
+  "toDate": "To date",
+  "From date must be less than to date": "From date must be less than to date",
+  "createChangeUserSuccessful": "Create request successfully",
+  "changeUser": "UPDATE MEMBER’S INFO",
+  "changeUserLong": "UPDATE MEMBER’S INFO",
+  "new user name": "New account name",
+  "new email": "New email",
+  "new phone": "New phone number",
+  "new id code": "New CCCD number",
+  "new wallet address": "New wallet address",
+  "changeUserCommit": "After both parties have confirmed the change of account owner, all complaints related to this account will not be resolved by the company and an account can only change owner 1/time in years",
+  "accept is required": "Please agree to the above commitment",
+  "reason": "Reason",
+  "reason is required": "Reason is required",
+  "changeUserPendingDesc": "Your request is being processed!",
+  "changeUserRejectedDesc": "Your request has been rejected!",
+  "tryAgain": "Recreate",
+  "requestUser": "Requester",
+  "receiveUser": "Recipient",
+  "processing": "Processing",
+  "rejected": "Rejected",
+  "approved": "Approved",
+  "cancelled": "Canceled",
+  "requestTime": "Request time",
+  "accept": "Approve",
+  "notAccept": "Reject",
+  "inputNoAcceptReason": "Enter reason for rejection",
+  "old user name": "Old user name",
+  "old email": "Old email",
+  "changeDate": "Change date",
+
+  "listNextTier": "List of users receiving tier",
+  "listTier": "List Tier",
+  "chooseNextUserForTier": "Choose the next user for tier",
+  "listUserReceiveNextTier": "List of recipients by tier",
+  "Tree does not exist": "The system tree was not found",
+  "Are you sure to change this.": "Do you want to prioritize this person?",
+
+  "removeTreeSuccess": "Delete system successfully",
+  "accountHanvePaid": "The account that generated the transaction",
+  "removeLastUserTier": "Remove newest system",
+  "systemNewInTier": "Latest system in tier :",
+  "Are you remove tree this.": "Delete this user's system",
+
+  "lockedTime": "Locked Time",
+  "DELETED": "Deleted",
+  "deletedTime": "Deleted time",
+  "senderStatus": "Account status",
+  "tier1Time": "Completed tier 1 :",
+  "tier2Time": "Completed tier 2 :",
+  "tier3Time": "Completed tier 3 :",
+  "tier4Time": "Complete tier 4 :",
+  "tier5Time": "Completed tier 5 :",
+
+  "oldParent": "Old parents",
+  "holdLevel": "Hold level (above)",
+  "level": "Level",
+
+  "refUserEmail": "Referer email",
+
+  "Please enter OTP code from your email": "Please enter OTP code from your email",
+  "We sent the code to your email": "We sent the code to your email",
+  "Didn't receive the code?": "Didn't receive the code?",
+  "Resend": "Resend code",
+  "Please wait a moment": "Please pay in a few minutes",
+  "otp is required": "Please fill in the otp code",
+  "Money transfer successful!": "Payment successful",
+  "system updated successfully": "System updated successfully",
+  "Insufficient balance": "Insufficient balance",
+  "isNotSerepayWalletAlert": "Please switch to using Serepay wallet. Documents download link: ",
+  "download": "Download",
+  "The wallet address does not exist in the Serepay system": "The wallet address does not exist in the Serepay system",
+
+  "congratPackageB": "Congratulations, you have successfully paid for package B",
+  "upgradeAPackage": "Upgrade to package A"
 }
