--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -189,7 +189,7 @@
   "finished": "Đã hoàn thành",
   "unfinished": "Chưa hoàn thành",
 
-  "full3child": "Tài khoản đã đủ 5 nhánh",
+  "full5child": "Tài khoản đã đủ 5 nhánh",
   "confirm password": "Xác nhận lại mật khẩu",
   "wallet address": "Địa chỉ ví",
   "user name": "Tên tài khoản",
@@ -262,8 +262,8 @@
   "choosePaymentMethod": "Chọn gói thanh toán",
   "skip": "Bỏ qua",
   "buyPackage": "Gói",
-  "buyPackageA": "(đóng góp 12 lần)",
-  "buyPackageB": "(đóng góp 6 lần)",
+  "buyPackageA": "Gói A",
+  "buyPackageB": "Gói B",
 
   "contineWithPackageB": "Tiếp tục với gói B",
   "contineWithPackageC": "Tiếp tục với gói C",
