--- a/client/src/locales/vi/translation.json
+++ b/client/src/locales/vi/translation.json
@@ -24,7 +24,7 @@
   "paymentTitle": "Thông tin thanh toán an toàn",
   "registerFee": "Phí đăng ký",
   "weeks": "Số tuần",
-  "verifyAccountAlert": "Vui lòng cung cấp hình ảnh thông tin cá nhân của bạn để xác minh tài khoản của bạn",
+  "verifyAccountAlert": "Lưu ý: Để rút tài sản của bạn, vui lòng đảm bảo bạn hoàn tất quy trình thẩm định KYC.",
   "forgotPassword": "Quên mật khẩu",
   "rememberMe": "Ghi nhớ",
   "password": "Mật khẩu",
