--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -352,7 +352,7 @@
   "tier1Time": "Completed tier 1 :",
   "tier2Time": "Completed tier 2 :",
   "tier3Time": "Completed tier 3 :",
-  "tier4Time": "Complete tier 4 :",
+  "tier4Time": "Completed tier 4 :",
   "tier5Time": "Completed tier 5 :",
 
   "oldParent": "Old parents",
