--- a/client/src/locales/en/translation.json
+++ b/client/src/locales/en/translation.json
@@ -349,11 +349,11 @@
   "DELETED": "Deleted",
   "deletedTime": "Deleted time",
   "senderStatus": "Account status",
-  "tier1Time": "Completed tier 1 :",
-  "tier2Time": "Completed tier 2 :",
-  "tier3Time": "Completed tier 3 :",
-  "tier4Time": "Completed tier 4 :",
-  "tier5Time": "Completed tier 5 :",
+  "tier1Time": "2 Referral :",
+  "tier2Time": "Tier 2 Entered :",
+  "tier3Time": "Tier 3 Entered :",
+  "tier4Time": "Tier 4 Entered :",
+  "tier5Time": "Tier 5 Entered :",
 
   "oldParent": "Old parents",
   "holdLevel": "Hold level (above)",
